# TFM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
data/interim/: gene_lengths_gencode_v19_grch37.csv
data/processed/: .gitignore  gse183635_split_indices.csv
data/raw/: .gitignore
docs/: 00_contexto_tfm.md  01_guia_trabajo_tfm.md  mkdocs.yml
docs/docs/: TFM_Dev_Guide.md  index.md
genomics_dl/: features.py  features_sklearn.py  metadata.py  models.py  utils.py
genomics_dl/models/: heterogeneity.py  train_binary.py
models/logreg_binary/v0.1.0/: README.md  metrics.json  params.yaml
models/logreg_binary/v0.2.0/: README.md  metrics.json  params.yaml
models/logreg_binary/v0.3.0/: MLmodel  README.md  conda.yaml  input_example.json  metrics.json  model.pkl  params.yaml  requirements.txt  serving_input_example.json  signature.json
notebooks/: 0.0-ssic-build-gene-lengths-gencode-v19.ipynb  1.0-ssic-platelet-rna-qc-and-tpm.ipynb  1.1-ssic-eda-poblacional-heterogeneidad-nonmalignant.ipynb  3.0-ssic-binary-baselines.ipynb
tests/: test_data.py
