[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "genomics_dl"
version = "0.0.1"
description = "This is the my final master thesis about deep learning in genomics"
authors = [
  { name = "Sergio Sicilia Gonz\u00e1lez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "fastparquet>=2024.11.0",
    "ipython",
    "joblib>=1.5.2",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "mlflow>=3.7.0",
    "notebook",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas",
    "pip",
    "pyarrow>=22.0.0",
    "pyreadr>=0.5.3",
    "pytest",
    "python-dotenv",
    "pyyaml>=6.0.3",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["genomics_dl"]
include = ["pyproject.toml", "genomics_dl/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["genomics_dl"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
